# 2048-Clone

./: IMDB_movie_reviews.ipynb  INF8225_TP3_2025.ipynb  README.md  ResNet.ipynb  help.py  main.py  pyproject.toml  unit3_DeepQLearning.ipynb
Game/: Board.py  TopBar.py  game.py
Terminale/Supports et exercices/: Pile et Files.ipynb
assets-repo/: info.txt
